--- a/css/부산종합버스터미널.css
+++ b/css/부산종합버스터미널.css
@@ -11,6 +11,7 @@
 
 body {
     font-family: 'NanumSquareNeo-Variable';
+    background-color: #f8f8f8;
 }
 
 .inner {
@@ -134,6 +135,7 @@ header .inner nav .gnb .depth01 .depth02 li:last-child {
     font-size: 20px;
     margin-bottom: 35px;
     position: relative;
+    cursor: pointer;
 }
 
 .cont01 .list .item .txt ul li:last-child {
@@ -168,4 +170,125 @@ header .inner nav .gnb .depth01 .depth02 li:last-child {
 
 .cont01 .list .mob h3 .second {
     color: #ff6e0d;
+}
+
+.cont01 .list .mob figure {
+    display: flex;
+    width: 264px;
+    height: 264px;
+    margin: 100px auto;
+}
+
+
+/* ------------------ .cont02 ------------------*/
+
+.cont02 {
+    margin-top: 100px;
+}
+
+.cont02 .inner {
+    width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.cont02 .inner .item {
+    margin-right: 242px;
+}
+
+.cont02 .inner .item h3 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.cont02 .inner .item .box {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.cont02 .inner .item .box figure {
+    width: 60px;
+    height: 58px;
+    margin-right: 30px;
+}
+
+.cont02 .inner .item .box figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cont02 .inner .item .box p {
+    font-size: 20px;
+    width: 250px;
+}
+
+.cont02 .inner .item .box span {
+    font-size: 20px;
+    display: flex;
+    width: 123px;
+    height: 40px;
+    border: 2px solid #3a49a4;
+    line-height: 40px;
+    justify-content: center;
+    cursor: pointer;
+}
+
+/* ------------------ .cont03 ------------------*/
+
+.cont03 {
+    margin: 100px 0;
+}
+
+.cont03 .inner {
+    width: 1440px;
+}
+
+.cont03 .inner .map h3 {
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 50px
+}
+
+/* ------------------ footer ------------------*/
+
+footer {
+    padding: 30px 0;
+    background-color: #3a49a4;
+}
+
+footer .inner {
+    width: 1440px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+}
+
+footer .inner .left li {
+    margin-bottom: 20px;
+}
+
+footer .inner .left li:last-child {
+    margin-bottom: 0px;
+}
+
+footer .inner .center .top {
+    display: flex;
+}
+
+footer .inner .center .top li {
+    margin-right: 30px;
+}
+
+footer .inner .center .bottom li {
+   text-align: center;
+   margin-top: 20px;
+}
+
+footer .inner .right li {
+    margin-top: 20px;
 }
